fix: update automated documentation generation process

--- a/template/{{.project_name}}/mkdocs.yml.tmpl
+++ b/template/{{.project_name}}/mkdocs.yml.tmpl
@@ -7,11 +7,10 @@ nav:
   - CI/CD: cicd.md
   - Resources:
       - Package: {{.package_name}}.md
-      - Notebooks: notebooks.md
   - Tests:
-      - Configuration: tests/test_configuration.md
       - Tests: tests/tests.md
-      - Coverage: tests/coverage_report.md
+      - Test Coverage: tests/coverage_report.md
+      - Test Configuration: tests/test_configuration.md
   - Release: release.md
   - Coding Standards: coding_standards.md
   - CHANGELOG: CHANGELOG.md
