--- a/template/{{.project_name}}/Makefile.tmpl
+++ b/template/{{.project_name}}/Makefile.tmpl
@@ -47,7 +47,7 @@ test:
 # Create a repository in RevoData's GitHub, and adds a remote to the local git repo
 repo:
 	@printf "Creating repository in RevoData's GitHub...\n"
-	@PROJECT_NAME=$$(grep 'name =' pyproject.toml | awk -F'"' '{print $$2}'); \
+	@PROJECT_NAME=$$(grep -m 1 '^name =' pyproject.toml | awk -F'"' '{print $$2}'); \
 	REPO_DESCRIPTION=$$(grep 'description =' pyproject.toml | awk -F'"' '{print $$2}'); \
 	if ! gh auth status >/dev/null 2>&1; then \
 		echo "Error: GitHub CLI is not authenticated. Please run 'gh auth login' first."; \
@@ -68,11 +68,14 @@ tree:
 	@tree -I '.venv|__pycache__|archive|scratch|.databricks|.ruff_cache|.mypy_cache|.pytest_cache|.git|htmlcov|site|dist|.DS_Store|fixtures' -a
 
 docs:
+	@echo "Running tests and generating badges..."
+	@uv run pytest -v tests --cov=src --cov-report html:docs/tests/coverage --junitxml=docs/tests/coverage/pytest_coverage.xml
+	@uv run coverage xml -o docs/tests/coverage/coverage.xml
+	@uv run genbadge coverage -i docs/tests/coverage/coverage.xml -o docs/assets/badge-coverage.svg
+	@uv run genbadge tests -i docs/tests/coverage/pytest_coverage.xml -o docs/assets/badge-tests.svg
+	@rm -rf docs/tests/coverage/.gitignore
 	@echo "Generating HTML documentation..."
 	@uv run pdoc --html src/{{.package_name}} -o docs/api --force
 	@uv run pdoc --html tests -o docs/api --force
-	@echo "Generating coverage report..."
-	@uv run pytest tests -v --cov=src --cov-report html:docs/tests/coverage
-	@rm -rf docs/tests/coverage/.gitignore
 	@uv run mkdocs build
 	@uv run mkdocs serve
