--- a/template/{{.project_name}}/docs/index.md.tmpl
+++ b/template/{{.project_name}}/docs/index.md.tmpl
@@ -1,4 +1,4 @@
-# Introduction
+# {{.project_name}}
 
 [![python](https://upload.wikimedia.org/wikipedia/commons/1/16/Blue_Python_3.10%2B_Shield_Badge.svg)](https://www.python.org)
 [![uv](https://img.shields.io/endpoint?url=https://raw.githubusercontent.com/astral-sh/uv/main/assets/badge/v0.json)](https://github.com/astral-sh/uv)
