--- a/template/{{.project_name}}/pyproject.toml.tmpl
+++ b/template/{{.project_name}}/pyproject.toml.tmpl
@@ -10,6 +10,7 @@ requires-python = ">=3.12"
 dependencies = []
 
 [tool.uv]
+package = true
 dev-dependencies = [
     "coverage>=7.6.1",
     "defusedxml>=0.7.1",
