--- a/template/{{.project_name}}/Makefile.tmpl
+++ b/template/{{.project_name}}/Makefile.tmpl
@@ -20,7 +20,7 @@ install:
 
 setup:
 	@echo "Setting up the project..."
-	uv sync;
+	UV_HTTP_TIMEOUT=120 uv sync;
 
 	@if [ ! -d ".git" ]; then \
 		echo "Setting up git..."; \
