fix(makefile): streamline makefile by removing manual steps in `install` target

--- a/template/{{.project_name}}/Makefile.tmpl
+++ b/template/{{.project_name}}/Makefile.tmpl
@@ -1,13 +1,13 @@
 .PHONY: install setup clean test repo tree docs
 
 install:
-	@echo "Please specify your operating system (macOS/ubuntu22.04):"
-	@read machine_input && \
-	if [ "$$machine_input" = "macOS" ]; then \
-		echo "You selected macOS."; \
+	@CURRENT_OS=$$(uname -s); \
+	echo "Current OS: $$CURRENT_OS"; \
+	if [ "$$CURRENT_OS" = "Darwin" ]; then \
 		echo "Verifying if Homebrew is installed..."; \
 		which brew > /dev/null || (echo "Homebrew is not installed. Installing Homebrew..." && /bin/bash -c "$$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"); \
-		for tool in git; do \
+		echo "Installing git and uv using brew"; \
+		for tool in git uv; do \
 			if ! command -v $$tool >/dev/null 2>&1; then \
 				echo "Installing $$tool..."; \
 				brew install $$tool; \
@@ -15,25 +15,15 @@ install:
 				echo "$$tool is already installed. Skipping."; \
 			fi; \
 		done; \
-		# Install uv for macOS using Homebrew \
-		if ! command -v uv >/dev/null 2>&1; then \
-			echo "Installing uv..."; \
-			brew install uv; \
-		else \
-			echo "uv is already installed. Skipping."; \
-		fi; \
-	elif [ "$$machine_input" = "ubuntu22.04" ]; then \
-		echo "You selected ubuntu22.04."; \
-		echo "Verifying if apt is available..."; \
-		for tool in git; do \
-			if ! command -v $$tool >/dev/null 2>&1; then \
-				echo "Installing $$tool..."; \
-				sudo apt update && sudo apt install -y $$tool; \
+	elif [ "$$CURRENT_OS" = "Linux" ]; then \
+		echo "Installing git using apt"; \
+		if ! command -v git >/dev/null 2>&1; then \
+				echo "Installing git..."; \
+				sudo apt update && sudo apt install -y git; \
 			else \
-				echo "$$tool is already installed. Skipping."; \
+				echo "git is already installed. Skipping."; \
 			fi; \
-		done; \
-		# Install uv for ubuntu22.04 using the provided script \
+		echo "Install uv using the provided script"; \
 		if ! command -v uv >/dev/null 2>&1; then \
 			echo "Installing uv..."; \
 			curl -LsSf https://astral.sh/uv/install.sh | sh; \
@@ -44,14 +34,13 @@ install:
 			echo "uv is already installed. Skipping."; \
 		fi; \
 	else \
-		echo "Unsupported OS input. Please enter either 'macOS' or 'ubuntu22.04'."; \
+		echo "Unsupported OS. Currently supported kernels are either Darwin (macOS) or Linux (ubuntu22.04)."; \
 		exit 1; \
-	fi
+	fi; \
 
-	@echo "Setting up Python version $$PYTHON_VERSION"; \
+	@echo "Setting up Python..."; \
 	uv python install || true; \
 	echo "All tools installed successfully."
-
 
 setup:
 	@echo "Setting up the project..."
