--- a/template/{{.project_name}}/Makefile.tmpl
+++ b/template/{{.project_name}}/Makefile.tmpl
@@ -101,5 +101,5 @@ docs:
 	@echo "Generating HTML documentation..."
 	@uv run pdoc --html src/{{.package_name}} -o docs/api --force
 	@uv run pdoc --html tests -o docs/api --force
-	@uv run mkdocs build
+	# @uv run mkdocs build
 	@uv run mkdocs serve
